Apache Tez Change Log
=====================

Release 0.8.5: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:

  TEZ-3097. Flaky test: TestCommit.testDAGCommitStartedEventFail_OnDAGSuccess.
  TEZ-3487. Improvements in travis yml file to get builds to work.
  TEZ-3483. Create basic travis yml file for Tez.
  TEZ-3437. Improve synchronization and the progress report behavior for Inputs from TEZ-3317.
  TEZ-3317. Speculative execution starts too early due to 0 progress.
  TEZ-3452. Auto-reduce parallelism calculation can overflow with large inputs
  TEZ-3439. Tez joinvalidate fails when first input argument size is bigger than the second.
  TEZ-3464. Fix findbugs warnings in tez-dag mainLoop
  TEZ-3330. Propagate additional config parameters when running MR jobs via Tez.
  TEZ-3335. DAG client thinks app is still running when app status is null
  TEZ-3460. Fix precommit release audit warning
  TEZ-3368. NPE in DelayedContainerManager
  TEZ-3440. Shuffling to memory can get out-of-sync when fetching multiple compressed map outputs
  TEZ-3429. Set reconfigureDoneTime on VertexConfigurationDoneEvent properly.
  TEZ-3000. Fix TestContainerReuse.
  TEZ-3436. Check input and output count before start in MapProcessor.
  TEZ-3426. Second AM attempt launched for session mode and recovery disabled for certain cases
  TEZ-3326. Display JVM system properties in AM and task logs.
  TEZ-3009. Errors that occur during container task acquisition are not logged.
  TEZ-2852. TestVertexImpl fails due to race in AsyncDispatcher.
  TEZ-3413. ConcurrentModificationException in HistoryEventTimelineConversion for AppLaunchedEvent.
  TEZ-3352. MRInputHelpers getStringProperty() should not fail if property value is null.
  TEZ-3409. Log dagId along with other information when submitting a dag.
  TEZ-3384. Fix TestATSV15HistoryLoggingService::testDAGGroupingGroupingEnabled unit test.
  TEZ-3376. Fix groupId generation to account for dagId starting with 1.